# chrooter

./: .gitignore  .gitreview  README.rst  requirements.txt  setup.cfg  tox.ini
automation/: build-artifacts.sh  check-patch.packages  check-patch.sh
chrooter/: cmd.py  utils.py
chrooter/provider/: __init__.py
chrooter_mock/: __init__.py
chrooter_pbuilder/: __init__.py
