[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[metadata]
name = chrooter
author = oVirt Infrastructure/CI team
author_email = infra@ovirt.org
summary = Create chroots
description-file = README.rst
license = GPLv3
home-page = http://gerrit.ovirt.org/gitweb?p=chrooter.git;a=tree;f=chrooter;hb=HEAD
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: GPLv3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only

[files]
packages =
    chrooter
    chrooter_mock
    chrooter_pbuilder

data_files =
   bin = chrooter_mock/scripts/mock_runner.sh

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    chrooter = chrooter.cmd:main

chrooter.provider =
    el6 = chrooter_mock:MockProvider
    el7 = chrooter_mock:MockProvider
    fc20 = chrooter_mock:MockProvider
    fc21 = chrooter_mock:MockProvider
    fc22 = chrooter_mock:MockProvider
    deb-sid = chrooter_pbuilder:PbuilderProvider
    deb-jessie = chrooter_pbuilder:PbuilderProvider
    deb-wheezy = chrooter_pbuilder:PbuilderProvider
    ubnt-precise = chrooter_pbuilder:PbuilderProvider
    ubnt-quantal = chrooter_pbuilder:PbuilderProvider
    ubnt-raring = chrooter_pbuilder:PbuilderProvider
